Ajuste na tela e nos componentes home (front-end)

--- a/frontend/src/app/componentes/home/home.component.html
+++ b/frontend/src/app/componentes/home/home.component.html
@@ -3,23 +3,23 @@
 <section>
     <div class="conteiner-index"><p>EM BREVE</p></div>
  <!--CARDS-->
- <div class="conteiner-card">
-    <div class="card1">
-        <div class = "card_texto_null">
-        <h5>Avatar: O Caminho da Água</h5>
-            <p><a class="btn" href="#">Sinopse</a></p>
+ <div class="conteiner-card" >
+    <div class="card1" >
+        <div class = "card_texto_null" *ngFor="let filme of filmes | slice:0" >
+            <h5>{{filme.nomeFilme}}</h5>
+            <p><a class="btn" routerLink="/filme/sobre/{{filme.idFilme}}">Detalhes</a></p>
         </div>
     </div>
-    <div class="card2">
-        <div class = "card_texto_null">
-        <h5>Avatar 2</h5>
-            <p><a class="btn" href="#">Sinopse</a></p>
+    <div class="card2" >
+        <div class = "card_texto_null" *ngFor="let filme of filmes | slice:1" >
+            <h5>{{filme.nomeFilme}}</h5>
+            <p><a class="btn" routerLink="/filme/sobre/{{filme.idFilme}}">Detalhes</a></p>
         </div>
     </div>
-    <div class="card3">
-        <div class = "card_texto_null">
-        <h5>Avatar 2</h5>
-            <p><a class="btn" href="#">Sinopse</a></p>
+    <div class="card3" >
+        <div class = "card_texto_null" *ngFor="let filme of filmes | slice:2" >
+            <h5>{{filme.nomeFilme}}</h5>
+            <p><a class="btn" routerLink="/filme/sobre/{{filme.idFilme}}">Detalhes</a></p>
         </div>
     </div>
 </div>  
