--- a/frontend/src/app/componentes/home/home.component.css
+++ b/frontend/src/app/componentes/home/home.component.css
@@ -13,19 +13,7 @@ body{
     background-color: #252525;
 }
 /*DEFINIÇOES CONTEINER LANCAMENTOS*/
-.conteiner-index{
-	background-color: #191919;
-    margin-top: 2%;
-    margin-left: 2%;
-    margin-right: 2%;
-    text-align: center;
-}
-.conteiner-index p{
-    color: white;
-	font-size: 400%;
-    padding-top: 3%;
-    padding-bottom: 3%;
-}
+
 /*DEFINIÇAO CARD*/
 .conteiner-card{
 	display: flex;
@@ -37,7 +25,7 @@ body{
 .card1{
 	height: 500px;
 	width: 20%;
-	background-image: url("../../../assets/img/av2cartaz.jpg");
+	background-image: url("../../../assets/img/Homem-Aranha-Sem-Volta-Para-Casa.jpg");
     background-size: 100% 100%;
 	border-radius: 20px;
 	margin: 15px;
@@ -46,10 +34,11 @@ body{
 	text-align: center;
     color: white;
 }
+
 .card2{
 	height: 500px;
 	width: 20%;
-	background-image: url("../../../assets/img/av2cartaz.jpg");
+	background-image: url("../../../assets/img/av img.jpg");
     background-size: 100% 100%;
 	border-radius: 20px;
 	margin: 15px;
@@ -58,10 +47,11 @@ body{
 	text-align: center;
     color: white;
 }
+
 .card3{
 	height: 500px;
 	width: 20%;
-	background-image: url("../../../assets/img/av2cartaz.jpg");
+	background-image: url("../../../assets/img/Thoramoretrovao.png");
     background-size: 100% 100%;
 	border-radius: 20px;
 	margin: 15px;
