Ajuste na tela e nos componentes nav-bar(front-end)

--- a/frontend/src/app/componentes/nav/nav.component.html
+++ b/frontend/src/app/componentes/nav/nav.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-sm hero">
     <!-- LOGO -->
     
-    <a routerLink="home" class="navbar-brand"><h2 class="logo"><u>Ticket</u><span>Box</span></h2></a>
+    <a href="index.html" class="logo"><img src="../../../assets/img/logsite2.png" 
+        alt="essa imagem esta com erro erro" class="lognav"/></a>
 
     <!-- NAVEGAÇÃO -->
     <ul class="navbar-nav ml-auto">
@@ -12,7 +13,7 @@
         <a class="nav-link " routerLink="filme">Filmes</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link " routerLink="cinema">Cinemas</a>
+        <a class="nav-link " routerLink="cinemas">Cinemas</a>
     </li>
     <li class="nav-item">
         <a *ngIf="situacao == true" class="nav-link login" routerLink="login">Perfil</a>
